<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/search_id"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:iconTint="@color/white"
        app:showAsAction="always"
        tools:ignore="UnusedAttribute" />
    <item
        android:id="@+id/setting_id"
        android:title="@string/settings" />
    <item
        android:id="@+id/about_id"
        android:title="@string/about" />
    <item android:title="@string/more_setting">
        <menu>
            <item
                android:id="@+id/contact_us_id"
                android:title="@string/contact_us" />
            <item
                android:id="@+id/share_id"
                android:title="@string/share" />
        </menu>
    </item>
</menu>