<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:text="@string/register"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <EditText
        android:hint="@string/gmail"
        android:layout_marginTop="100dp"
        android:id="@+id/gmail_edit_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <EditText
        android:hint="@string/password"
        android:id="@+id/password_edit_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/confirm_password"
        android:id="@+id/confirm_password_edit_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/to_login"
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>