<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="30sp" />


    <EditText
        android:id="@+id/login_gmail_edit_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:hint="@string/gmail" />


    <EditText
        android:id="@+id/login_password_edit_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password" />


    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/to_register_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register" />
</LinearLayout>