<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_nav_id">


    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_above="@+id/bottom_nav_id"
        android:background="@color/black" />

    <LinearLayout
        android:id="@+id/bottom_nav_id"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="@string/home"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="@string/search"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>