<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <androidx.cardview.widget.CardView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:elevation="5dp"
            app:cardCornerRadius="360dp"
            app:cardElevation="5dp">

                <TextView
                    android:id="@+id/contact_img_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#cccccc"
                    android:gravity="center"
                    android:text="@string/aa"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/contact_name_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/mahmudjanov_azizbek"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/contact_phone_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_998932685006" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/black" />
</LinearLayout>