<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/action_bar_layout_id"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/action_bar_back"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:padding="12dp"
            android:src="@drawable/ic_arrow_back" />

        <androidx.cardview.widget.CardView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:elevation="15dp"
            app:cardBackgroundColor="@color/teal_700"
            app:cardCornerRadius="360dp"
            app:cardElevation="55dp"
            app:elevation="50dp">

            <TextView
                android:id="@+id/action_bar_img_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#cccccc"
                android:gravity="center"
                android:text="@string/aa"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/full_name_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="Azizbek Mahmudov"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/seen_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="online"
                android:textColor="@color/white" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/message_layout_id"
        android:layout_below="@+id/action_bar_layout_id"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/message_recycler_view_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/teal_700" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/message_layout_id"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp">

        <ImageView
            android:id="@+id/message_emoji_btn_id"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:padding="5dp"
            android:src="@drawable/ic_emoji"
            android:text="@string/send" />

        <EditText
            android:id="@+id/message_edit_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toStartOf="@+id/send_layout_id"
            android:layout_toEndOf="@+id/message_emoji_btn_id"
            android:background="@null"
            android:hint="@string/message"
            android:paddingStart="10dp" />

        <RelativeLayout
            android:id="@+id/send_layout_id"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true">

            <ImageView
                android:id="@+id/message_attach_btn_id"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_toStartOf="@id/message_mic_btn_id"
                android:padding="5dp"
                android:src="@drawable/ic_attach_file"
                android:text="@string/send" />

            <ImageView
                android:id="@+id/message_mic_btn_id"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:padding="5dp"
                android:src="@drawable/ic_mic"
                android:text="@string/send" />

            <ImageView
                android:id="@+id/send_btn_id"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:src="@drawable/ic_send"
                android:visibility="gone" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>